--- a/{{ cookiecutter.project_name }}/.github/workflows/plan-{{cookiecutter.default_environment_name}}.yaml
+++ b/{{ cookiecutter.project_name }}/.github/workflows/plan-{{cookiecutter.default_environment_name}}.yaml
@@ -1,3 +1,4 @@
+#{% raw %}
 name: CI/CD Terraform Plan Pipeline
 permissions:
   contents: read
@@ -30,3 +31,4 @@ jobs:
       - id: cloc
         name: Get Lines of Code
         uses: ./.github/actions/cloc-repository
+#{% endraw %}
