--- a/{{ cookiecutter.project_name }}/.github/actions/get-metadata/action.yaml
+++ b/{{ cookiecutter.project_name }}/.github/actions/get-metadata/action.yaml
@@ -12,3 +12,4 @@ runs:
         echo "build_timestamp=$(date --date=$datetime -u +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
         echo "build_epoch=$(date --date=$datetime -u +'%s')" >> $GITHUB_OUTPUT
         echo "terraform_version=$(cat .terraform-version | cut -f2 -d' ')" >> $GITHUB_OUTPUT
+        echo "terragrunt_version=$(cat .terragrunt-version | cut -f2 -d' ')" >> $GITHUB_OUTPUT
