--- a/{{ cookiecutter.project_name }}/.github/actions/cloc-repository/action.yaml
+++ b/{{ cookiecutter.project_name }}/.github/actions/cloc-repository/action.yaml
@@ -1,14 +1,15 @@
+---
 name: CLOC
 description: Count lines of code in this repository
 runs:
-  using: "composite"
-  steps:
-    - name: Grant execute permissions to the script
-      shell: bash
-      run: chmod +x ./.github/scripts/cloc-repository.sh
+    using: composite
+    steps:
+      - name: Grant execute permissions to the script
+        shell: bash
+        run: chmod +x ./.github/scripts/cloc-repository.sh
 
-    - name: Count lines of code in this repository
-      shell: bash
-      run: |
-        export FORMAT=default
-        ./.github/scripts/cloc-repository.sh
+      - name: Count lines of code in this repository
+        shell: bash
+        run: |
+            export FORMAT=default
+            ./.github/scripts/cloc-repository.sh
