--- a/{{ cookiecutter.project_name }}/.terraform-docs.yaml
+++ b/{{ cookiecutter.project_name }}/.terraform-docs.yaml
@@ -1,3 +1,4 @@
+{% raw %}
 ---
 formatter: markdown
 sections:
@@ -12,3 +13,4 @@ output:
         <!-- BEGIN_TF_DOCS -->
         {{ .Content }}
         <!-- END_TF_DOCS -->
+{% endraw %}
